--- a/frontend-developer/platzi-video/login/styles.css
+++ b/frontend-developer/platzi-video/login/styles.css
@@ -147,3 +147,21 @@ body {
 .footer a:hover {
   text-decoration: underline;
 }
+
+@media only screen and (max-width: 600px) {
+  .login__container {
+    background-color: transparent;
+    border: none;
+    padding: 0px;
+    width: 100%;
+  }
+
+  .footer {
+    align-items: flex-start;
+    flex-direction: column;
+  }
+
+  .footer a {
+    margin-bottom: 5px;
+  }
+}
