--- a/frontend-developer/platzi-video/register/styles.css
+++ b/frontend-developer/platzi-video/register/styles.css
@@ -31,11 +31,12 @@ body {
 
 .register__container {
   background-color: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
   border: solid 2px #FFF;
   border-radius: 40px;
   color: #FFF;
   padding: 60px 68px 40px;
-  min-height: 700px;
+  min-height: 600px;
   width: 300px;
   display: flex;
   justify-content: space-around;
@@ -57,6 +58,12 @@ body {
   font-weight: bold;
   font-size: 16px;
   text-decoration: none;
+  outline: none;
+} 
+
+.register__container--login p:focus {
+  margin: 0;
+  outline: none;
 } 
 
 .register__container--login a:hover {
@@ -83,7 +90,7 @@ body {
 }
 
 .button {
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.3);
   border: none;
   border-radius: 25px;
   color: #FFF;
@@ -119,6 +126,7 @@ body {
 @media only screen and (max-width: 600px) {
   .register__container {
     background-color: transparent;
+    box-shadow: none;
     border: none;
     padding: 0px;
     width: 100%;
