PlatziVideo: Header and Search components were added

--- a/react-js/platzi-video-react/src/assets/styles/App.scss
+++ b/react-js/platzi-video-react/src/assets/styles/App.scss
@@ -1,5 +1,9 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
-  margin: 0;
-  background-color: darkred;
-  color: white;
+  margin: 0px;
+  font-family: 'Mulish', sans-serif;
+  background-color: #8F57FD;
 }
