--- a/react-js/platzi-video-react/src/assets/styles/App.scss
+++ b/react-js/platzi-video-react/src/assets/styles/App.scss
@@ -1,9 +1,12 @@
+@import './Vars.scss';
+@import './Media.scss';
+
 * {
   box-sizing: border-box;
 }
 
 body {
   margin: 0px;
-  font-family: 'Mulish', sans-serif;
-  background-color: #8F57FD;
+  font-family: $theme-font;
+  background-color: $main-color;
 }
