--- a/react-js/platzi-video-react/src/assets/styles/components/Search.scss
+++ b/react-js/platzi-video-react/src/assets/styles/components/Search.scss
@@ -10,3 +10,21 @@
   color: #FFF;
   font-size: 25px;
 }
+
+.input {
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 2px solid #FFF;
+  border-radius: 25px;
+  color: #FFF;
+  font-family: 'Mulish', sans-serif;
+  font-size: 16px;
+  height: 50px;
+  margin-bottom: 20px;
+  padding: 0px 20px;
+  width: 70%;
+  outline: none;
+}
+
+::placeholder {
+  color: white;
+}
