--- a/react-router-and-redux/platzi-video-react-redux/src/assets/styles/components/Login.scss
+++ b/react-router-and-redux/platzi-video-react-redux/src/assets/styles/components/Login.scss
@@ -15,8 +15,8 @@
   border-radius: 40px;
   color: #FFF;
   padding: 60px 68px 40px;
-  min-height: 700px;
-  width: 300px;
+  // min-height: 700px;
+  // width: 300px;
   display: flex;
   justify-content: space-around;
   flex-direction: column;
