Some validations were made

--- a/react-router-and-redux/platzi-video-react-redux/src/assets/styles/App.scss
+++ b/react-router-and-redux/platzi-video-react-redux/src/assets/styles/App.scss
@@ -1,5 +1,7 @@
 @import './Vars.scss';
 @import './Media.scss';
+@import '../styles/components/Button.scss';
+@import '../styles/components/Input.scss';
 
 * {
   box-sizing: border-box;
