--- a/react-router-and-redux/platzi-video-react-redux/src/assets/styles/components/Header.scss
+++ b/react-router-and-redux/platzi-video-react-redux/src/assets/styles/components/Header.scss
@@ -9,6 +9,10 @@
   align-items: center;
 }
 
+.isLogin, .isRegister, .isNotFound {
+  background-color: #21C08B;
+}
+
 .header__img {
   width: 200px;
   margin-left: 30px;
@@ -54,4 +58,6 @@
 .header__menu--profile img {
   margin-right: 8px;
   width: 40px;
+  border-radius: 100%;
+  object-fit: cover;
 }
