--- a/react-router-and-redux/platzi-video-react-redux/src/assets/styles/components/Register.scss
+++ b/react-router-and-redux/platzi-video-react-redux/src/assets/styles/components/Register.scss
@@ -15,6 +15,8 @@
   border-radius: 40px;
   color: #FFF;
   padding: 60px 68px 40px;
+  min-height: 700px;
+  width: 440px;
   display: flex;
   justify-content: space-around;
   flex-direction: column;
@@ -32,6 +34,7 @@
 
 .register__container--login a {
   color: #FFF;
+  margin-left: 5px;
   font-weight: bold;
   font-size: 16px;
   text-decoration: none;
